crates/java-syntax/src/snapshots/java_parser__lexer__tests__boolean_and_null_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"true false null\")"
---
[
    (
        True,
        "true",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        False,
        "false",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Null,
        "null",
    ),
]
