crates/java-syntax/src/snapshots/java_parser__lexer__tests__char_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"'a' '\\\\n' '\\\\''\")"
---
[
    (
        CharLiteral,
        "'a'",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        CharLiteral,
        "'\\n'",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        CharLiteral,
        "'\\''",
    ),
]
