crates/java-syntax/src/snapshots/java_parser__lexer__tests__comment_termination_variants-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// normal comment \\r\\n int w = 4;\")"
---
[
    (
        LineComment,
        "// normal comment ",
    ),
    (
        Whitespace,
        "\r\n ",
    ),
    (
        Int,
        "int",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "w",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Equal,
        "=",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "4",
    ),
    (
        Semicolon,
        ";",
    ),
]
