crates/java-syntax/src/snapshots/java_parser__lexer__tests__comment_termination_variants.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// hidden comment \\\\u000A int x = 1;\")"
---
[
    (
        LineComment,
        "// hidden comment ",
    ),
    (
        Whitespace,
        "\n ",
    ),
    (
        Int,
        "int",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "x",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Equal,
        "=",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "1",
    ),
    (
        Semicolon,
        ";",
    ),
]
