crates/java-syntax/src/snapshots/java_parser__lexer__tests__comments-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"/* this is a \\n block comment */\")"
---
[
    (
        BlockComment,
        "/* this is a \n block comment */",
    ),
]
