crates/java-syntax/src/snapshots/java_parser__lexer__tests__comments-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"int /* comment */ x // line\")"
---
[
    (
        Int,
        "int",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        BlockComment,
        "/* comment */",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "x",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        LineComment,
        "// line",
    ),
]
