crates/java-syntax/src/snapshots/java_parser__lexer__tests__comments.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// this is a line comment\\n\")"
---
[
    (
        LineComment,
        "// this is a line comment",
    ),
    (
        Whitespace,
        "\n",
    ),
]
