crates/java-syntax/src/snapshots/java_parser__lexer__tests__complex_jls_scenario.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"List<String> list = new ArrayList<>();\")"
---
[
    (
        Identifier,
        "List",
    ),
    (
        Less,
        "<",
    ),
    (
        Identifier,
        "String",
    ),
    (
        Greater,
        ">",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "list",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Equal,
        "=",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        New,
        "new",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "ArrayList",
    ),
    (
        Less,
        "<",
    ),
    (
        Greater,
        ">",
    ),
    (
        LeftParen,
        "(",
    ),
    (
        RightParen,
        ")",
    ),
    (
        Semicolon,
        ";",
    ),
]
