crates/java-syntax/src/snapshots/java_parser__lexer__tests__error_illegal_text_block_open.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"\\\"\\\"\\\"illegal\")"
---
[
    IllegalTextBlockOpen,
    UnterminatedTextBlock,
]
