crates/java-syntax/src/snapshots/java_parser__lexer__tests__error_invalid_char.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"'abc'\")"
---
[
    InvalidChar,
]
